# expenses_tracker

./: .env  .env.example  docker-compose.yml  drop_tables.py  git_initialize.sh  pyproject.toml  test_db.py
app/: main.py
app/config/: helpers.py  metadata.py  settings.py
app/custom_helpers/: metadata.py
app/database/: db.py
app/managers/: auth.py  email.py  user.py
app/models/: expenses.py  incomes.py  shared_amount.py  user.py
app/queries/: tables_queries.py
app/resources/: auth.py  routes.py  user.py
app/schemas/: examples.py
app/schemas/request/: incomes.py
app/schemas/response/: incomes.py  user.py
app/utils/: data_conversion.py
templates /: index.html
templates /email/: welcome.html
