[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = ""
authors = ["Diwash Bhandari <diwash.bhandari@codavatar.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.99.1"
SQLAlchemy = "^1.4.49"
PyJWT = "^2.7.0"
Jinja2 = "^3.1.3"
databases = {extras = ["asyncpg"], version = "^0.8.0"}
pre-commit = "^3.6.0"
black = "^24.1.1"
httpx = "0.23.3"
tomli = "^2.0.1"
asyncpg = "^0.28.0"
python-decouple = "^3.8"
psycopg2 = "^2.9.6"

[tool.poetry.dependencies.fastapi-mail]
extras = ["httpx"]
version = "^1.3.1"

[tool.poetry.dependencies.uvicorn]
extras = ["standard"]
version = "^0.22.0"

[tool.poetry.dependencies.passlib]
extras = ["bcrypt"]
version = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
